hadron chap almost done

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -132,7 +132,8 @@
 \newcommand{\impact}{\ensuremath{\mbox{$b_r$}}\xspace}
 \newcommand{\impactmax}{\ensuremath{\mbox{$b_r^\text{max}$}}\xspace}
 \newcommand{\decaydist}{\ensuremath{\mbox{$L_\text{decay}$}}\xspace}
-\newcommand{\decaydistmin}{\ensuremath{\mbox{$L_\text{decay}^\text{min}$}}\xspace}
+\newcommand{\decaydistmin}{\ensuremath{\mbox{$L_\text{decay}^\text{cut}$}}\xspace}
+\newcommand{\decaydistopt}{\ensuremath{\mbox{$L_\text{decay}^\text{cut, opt}$}}\xspace}
 
 
 
