--- a/auger.tex
+++ b/auger.tex
@@ -1,2 +1,2 @@
-\chapter[Pierre Auger Observatory]{Pierre Auger Observatory}
+\chapter[UHECR detection and the Pierre Auger Observatory]{UHECR detection and the Pierre Auger Observatory}
 \label{sec:auger}
