--- a/bib_aliases.tex
+++ b/bib_aliases.tex
@@ -2,7 +2,6 @@
 \def\NASixtyOnePaper{Abgrall:2014xwa} 
 \def\NAFortyNinePaper{Afanasev:1999iu}
 \def\RhoPaper{Aduszkiewicz:2017anm}
-\def\ICRC17{Prado:2017hub}
 \def\QGSJetPaper{Ostapchenko:2010vb}
 \def\DPMJetPaper{Roesler:2000he}
 \def\EposPaper{Pierog:2006qv}
@@ -13,6 +12,9 @@
 \def\APP17{Prado:2017ijs}
 \def\AlicePaper{Aamodt:2008zz}
 \def\CMSPaper{Chatrchyan:2008aa}
-
-  
+\def\IoanaICRC{IoanaICRC2009}
+\def\MichaelICRC{UngerICRC2011}
+\def\HansICRC{HansICRC2013}
+\def\AlexICRC{Herve:2015lra}
+\def\RaulICRC{Prado:2017hub}
   
