--- a/figures_hadron.tex
+++ b/figures_hadron.tex
@@ -385,7 +385,78 @@
   \label{fig:hadron:dedx:fit:out350w}
 \end{figure}
 
+
+
+%%%%%%%%%%% DECAY DIST CUT %%%%%%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.99\textwidth]{vzero/cut_dist_Data350}
+  
+  \caption{Optimization of the \decaydistmin for the 350 \GeVc dataset. The plot on left, middle and right shows \lamb, \antilamb and \kzeros, respectively.}
+  \label{fig:hadron:vzero:cuts:decaydist:350}
+\end{figure}
+
 \clearpage
+
+%%%%%%%%%%% CHI SQ %%%%%%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.99\textwidth]{vzero/chisq_Data350_t0_ph1}
+  
+  \caption{}
+  \label{fig:hadron:vzero:signal:chi:350}
+\end{figure}
+
+
+%%%%%%%%%%% EXTRACTED SIGNAL %%%%%%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.99\textwidth]{vzero/signal_Data350_t0}
+  
+  \caption{}
+  \label{fig:hadron:vzero:signal:extracted:350in}
+\end{figure}
+
+%%%%%%%%%%% EXTRACTED SIGNAL %%%%%%%%%%%%%%%%%%
+\begin{figure}
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.99\textwidth]{vzero/signal_Data350_t1}
+  
+  \caption{}
+  \label{fig:hadron:vzero:signal:extracted:350out}
+\end{figure}
+
+
+%%%%%%%%%%% DIST %%%%%%%%%%%%%%%%%%
+\begin{figure}[!ht]
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{vzero/mass_Data350_t0_ph1_h0_x1_y3}
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{vzero/mass_Data350_t0_ph1_h1_x1_y3}
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{vzero/mass_Data350_t0_ph1_h2_x2_y4}
+
+  \vspace{0.5cm}
+    
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{vzero/mass_Data350_t0_ph1_h0_x5_y0}
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{vzero/mass_Data350_t0_ph1_h1_x5_y0}
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{vzero/mass_Data350_t0_ph1_h2_x5_y1}
+
+  
+  \caption{Examples of the fitted \minv distributions for the 350 \GeVc dataset. The plot on left, middle and right shows \lamb, \antilamb and \kzeros, respectively.}
+  \label{fig:hadron:vzero:signal:dist:350:in}
+\end{figure}
+
+
+
+%%%%%%%%%%% DIST %%%%%%%%%%%%%%%%%%
+\begin{figure}[!ht]
+  \centering
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{vzero/mass_Data350_t1_ph0_h0_x3_y0}
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{vzero/mass_Data350_t1_ph0_h1_x3_y0}
+  \includegraphics[clip, rviewport=0 0 1 1,width=0.32\textwidth]{vzero/mass_Data350_t1_ph0_h2_x3_y0}
+  
+  \caption{Examples of the fitted \minv distributions for the 350 \GeVc dataset, with target removed. The plot on left, middle and right shows \lamb, \antilamb and \kzeros, respectively.}
+  \label{fig:hadron:vzero:signal:dist:350:out}
+\end{figure}
 
 
 %%%%%%%%%% BETA %%%%%%%%%%%%%%
