--- a/lib.bib
+++ b/lib.bib
@@ -626,6 +626,59 @@
       SLACcitation   = "%%CITATION = ARXIV:1707.07902;%%"
 }
 
+@inproceedings{IoanaICRC2009,
+      author         = "Maris, I. C.",
+      title          = "{Hadron production measurements with the NA61/SHINE 
+experiment and their relevance for air shower simulations}",
+      booktitle      = "{Proceedings, 31st International Cosmic Ray Conference
+                        (ICRC 2009): L\'{o}d\'{z}, Poland, July 07-15, 2009}"
+   
+}
+
+@inproceedings{UngerICRC2011,
+      author         = "Unger, M.",
+      title          = "{Hadro production Measurements with NA61/SHINE for the
+                        Understanding of Extensive Air Showers}",
+      booktitle      = "{Proceedings,  	 32nd International Cosmic Ray Conference
+                        (ICRC 2011): Beijing, China, August 11-18, 2011}",
+      url            = "http://inspirehep.net/record/1352482/files/v5_1094.pdf",
+      volume         = "5",
+      pages          = "67",
+      doi            = "10.7529/ICRC2011/V05/1094",
+      SLACcitation   = "%%CITATION = INSPIRE-1352482;%%"
+}
+
+@inproceedings{HansICRC2013,
+      author         = "Dembinski, Hans",
+      title          = "{Measurement of hadron-carbon interactions for better
+                        understanding of air showers with NA61/SHINE}",
+      booktitle      = "{Proceedings, 33rd International Cosmic Ray Conference
+                        (ICRC2013): Rio de Janeiro, Brazil, July 2-9, 2013}",
+      url            = "http://www.cbpf.br/%7Eicrc2013/papers/icrc2013-0688.pdf",
+      pages          = "0688",
+      SLACcitation   = "%%CITATION = INSPIRE-1412368;%%"
+}
+
+@article{Herve:2015lra,
+      author         = "Herve, Alexander",
+      title          = "{Results from pion-carbon interactions measured by
+                        NA61/SHINE for better understanding of extensive air
+                        showers}",
+      booktitle      = "{Proceedings, 34th International Cosmic Ray Conference
+                        (ICRC 2015): The Hague, The Netherlands, July 30-August 6,
+                        2015}",
+      collaboration  = "NA61",
+      journal        = "PoS",
+      volume         = "ICRC2015",
+      year           = "2016",
+      pages          = "330",
+      note           = "[34,330(2015)]",
+      eprint         = "1509.06586",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1509.06586;%%"
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%% THESIS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
