--- a/main.tex
+++ b/main.tex
@@ -266,11 +266,13 @@
 
 \include{introduction}
 
+\include{uhecr}
+
 \include{showers}
 
 \include{auger}
 
-\include{shine}
+%\include{shine}
 
 \include{interpetration}
 
