--- a/showers.tex
+++ b/showers.tex
@@ -1,25 +1,57 @@
-\chapter[Extensive air showers]{Extensive air showers}
+\chapter[Extensive air showers and UHECR composition]{Extensive air showers and UHECR composition}
 \label{sec:showers}
 
 
-\section{EM component and the \xmax}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Extensive air shower phenomenology}
+\label{sec:showers:phen}
 
-\section{Hadronic component and the \nmu}
+%%================================%%
+\subsection{Electromagnetic component}
+\label{sec:showers:phen:em}
+
+%%================================%%
+\subsection{Hadronic component and muon production}
+\label{sec:showers:phen:had}
+
+%%================================%%
+\subsection{Longitudinal and lateral profiles}
+\label{sec:showers:phen:prof}
 
 
-\cite{Pierog:2013dya,Knapp:2002vs,Meurer:2005dt,Pierog:2017nes,Espadanal:2016jse}
-
-average pt against spectra of muons at the ground
-
-\section{Observables}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Extensive air shower simulations}
 
 
-\subsection{\xmax}
+-softwares: CORSIKA, CONEX, etc
 
-\subsection{\nmu}
+%%================================%%
+\subsection{Hadronic interaction models}
+
+-low energy
+
+-high energy
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Measurements of EAS observables and UHECR composition}
+
+%%================================%%
+\subsection{Shower maximum (\xmax) and UHECR composition}
+
+%%================================%%
+\subsection{Number of muons (\nmu) and the muon excess}
+
+%%================================%%
+\subsection{Muon production depth (\xmumax)}
+
+%%================================%%
+\subsection{Further measurements}
+
+-risetime asymmetry
+
+-delta method
 
 
-\subsection{\xmumax}
 
 
 
